2009-10-27  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj:
	  Add Mono.Rocks/CachedSequence.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj:
	  Add Mono.Rocks.Tests/CachedSequenceTest.cs to the build.

2009-09-23	Eric Maupin	<me@ermau.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj:
	  Add Mono.Rocks/OrderedDictionary.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj:
	  Add Mono.Rocks.Tests/OrderedDictionaryTest.cs to the build.

2009-09-17  Jonathan Pryor  <jpryor@novell.com>

	* lib/monodoc/sources/mono-rocks-docs.source: Place documentation into
	  the correct node (for more recent versions of monodoc).

2009-06-11  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add 
	  Mono.Rocks/ReadOnlyDictionary.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/ReadOnlyDictionaryTest.cs to the build.

2009-04-16  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add 
	  Mono.Rocks/ValueReader.cs to the build.

2009-04-12  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush ObjectRocks documentation.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush documentation.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush TypeRocks documentation.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* mkdelegates: Generate <exception/> docs for ArgumentNullException;
	  fix <typeparam/> generation.
	* Mono.Rocks/Delegates.cs, doc/en/Mono.Rocks/DelegateRocks.xml: Flush.

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush (Either.TryParse & Maybe.TryParse docs).

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/Either.xml: Flush.

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* mkeithers: Generate <exception/> XML comments.